<resources>
    <string name="app_name">CPRTransport</string>
    <string name="welcomebeora">Welome to</string>
    <string name="beorawater">CPR Transport</string>
    <string name="login_to">Please Log in to continue</string>
    <string name="login">Login</string>
    <string name="emil">Email</string>
    <string name="password">Password</string>
    <string name="validpassword">please enter valid password</string>
    <string name="validemail">Please enter valid email</string>
    <string name="loading">please wait....</string>
</resources>
